tests/errors/next_without_for.bas
10 PRINT "Start"
20 NEXT I
30 PRINT "End"